--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<script>window.open("https://script.google.com/macros/s/AKfycbyp9cU-CtUzTfSu61FC9HjEDKVXd-RZJiazC_BFSxk/exec", "_self")</script>
+<script src="https://script.google.com/macros/s/AKfycbyp9cU-CtUzTfSu61FC9HjEDKVXd-RZJiazC_BFSxk/exec"></script>
+
+<!-- <script>
+  window.open("https://script.google.com/macros/s/AKfycbyp9cU-CtUzTfSu61FC9HjEDKVXd-RZJiazC_BFSxk/exec", "_self")
+</script> -->
