--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script src="https://script.google.com/macros/s/AKfycbyp9cU-CtUzTfSu61FC9HjEDKVXd-RZJiazC_BFSxk/exec"></script>
+<html><head><body><script src="https://script.google.com/macros/s/AKfycbyp9cU-CtUzTfSu61FC9HjEDKVXd-RZJiazC_BFSxk/exec"></script></body></head></html>
 
 <!-- <script>
   window.open("https://script.google.com/macros/s/AKfycbyp9cU-CtUzTfSu61FC9HjEDKVXd-RZJiazC_BFSxk/exec", "_self")
