--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<html><head><body><script src="https://script.google.com/macros/s/AKfycbyp9cU-CtUzTfSu61FC9HjEDKVXd-RZJiazC_BFSxk/exec"></script></body></head></html>
+<html>
+  <head>
+    <link rel="manifest" href="/manifest.json">
+  </head>
+  <body><script src="https://script.google.com/macros/s/AKfycbyp9cU-CtUzTfSu61FC9HjEDKVXd-RZJiazC_BFSxk/exec"></script></body></html>
 
 <!-- <script>
   window.open("https://script.google.com/macros/s/AKfycbyp9cU-CtUzTfSu61FC9HjEDKVXd-RZJiazC_BFSxk/exec", "_self")
