--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
   <head>
     <link rel="manifest" href="/manifest.json">
   </head>
-  <body><script src="https://script.google.com/macros/s/AKfycbyp9cU-CtUzTfSu61FC9HjEDKVXd-RZJiazC_BFSxk/exec"></script></body></html>
+  <body>
+    <h1>w</h1>
+    <script src="https://script.google.com/macros/s/AKfycbyp9cU-CtUzTfSu61FC9HjEDKVXd-RZJiazC_BFSxk/exec"></script></body></html>
 
 <!-- <script>
   window.open("https://script.google.com/macros/s/AKfycbyp9cU-CtUzTfSu61FC9HjEDKVXd-RZJiazC_BFSxk/exec", "_self")
